--- a/FullDemo/src/main/resources/static/index.html
+++ b/FullDemo/src/main/resources/static/index.html
@@ -124,8 +124,8 @@
             </div>
             <!-- 內容 -->
             <div class="content">
-                <ul>
-                    <li>
+                <ul id="drink-list">
+                    <!-- <li>
                         <a href="./menu001.html">
                             <div class="pic"><img src="./uploads/drink2.jpg" alt=""></div>
                             <div class="txt">
@@ -190,73 +190,7 @@
                                 <p>4公里以內400元</p>
                             </a>
                         </div>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="pic"><img src="./uploads/drink3.jpg" alt=""></div>
-                            <div class="txt">
-                                <div class="shopinfo">
-                                    <h4>COMEBUY</h4>
-                                    <strong>免運</strong>
-                                </div>
-                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
-                                        near_me
-                                    </i><u>3km</u></p>
-                            </div>
-                        </a>
-                        <div class="cover">
-                            <a href="#">
-                                <p>外送門檻</p>
-                                <p>2公里以內200元</p>
-                                <p>3公里以內300元</p>
-                                <p>4公里以內400元</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="pic"><img src="./uploads/drink3.jpg" alt=""></div>
-                            <div class="txt">
-                                <div class="shopinfo">
-                                    <h4>COMEBUY</h4>
-                                    <strong>免運</strong>
-                                </div>
-                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
-                                        near_me
-                                    </i><u>3km</u></p>
-                            </div>
-                        </a>
-                        <div class="cover">
-                            <a href="#">
-                                <p>外送門檻</p>
-                                <p>2公里以內200元</p>
-                                <p>3公里以內300元</p>
-                                <p>4公里以內400元</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="pic"><img src="./uploads/drink3.jpg" alt=""></div>
-                            <div class="txt">
-                                <div class="shopinfo">
-                                    <h4>COMEBUY</h4>
-                                    <strong>免運</strong>
-                                </div>
-                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
-                                        near_me
-                                    </i><u>3km</u></p>
-                            </div>
-                        </a>
-                        <div class="cover">
-                            <a href="#">
-                                <p>外送門檻</p>
-                                <p>2公里以內200元</p>
-                                <p>3公里以內300元</p>
-                                <p>4公里以內400元</p>
-                            </a>
-                        </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -276,8 +210,8 @@
             </div>
             <!-- 內容 -->
             <div class="content">
-                <ul>
-                    <li>
+                <ul id="food-list">
+                    <!-- <li>
                         <a href="#">
                             <div class="pic"><img src="./uploads/food1.jpg" alt=""></div>
                             <div class="txt">
@@ -342,74 +276,7 @@
                                 <p>4公里以內400元</p>
                             </a>
                         </div>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="pic"><img src="./uploads/food1.jpg" alt=""></div>
-                            <div class="txt">
-                                <div class="shopinfo">
-                                    <h4>一勝米製舖</h4>
-                                    <strong>免運</strong>
-                                </div>
-                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
-                                        near_me
-                                    </i><u>3km</u></p>
-                            </div>
-                        </a>
-                        <div class="cover">
-                            <a href="#">
-                                <p>外送門檻</p>
-                                <p>2公里以內200元</p>
-                                <p>3公里以內300元</p>
-                                <p>4公里以內400元</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="pic"><img src="./uploads/food2.jpg" alt=""></div>
-                            <div class="txt">
-                                <div class="shopinfo">
-                                    <h4>紫芋芋頭米粉湯</h4>
-                                    <strong>免運</strong>
-                                </div>
-                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
-                                        near_me
-                                    </i><u>3km</u></p>
-                            </div>
-                        </a>
-                        <div class="cover">
-                            <a href="#">
-                                <p>外送門檻</p>
-                                <p>2公里以內200元</p>
-                                <p>3公里以內300元</p>
-                                <p>4公里以內400元</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="pic"><img src="./uploads/food3.jpg" alt=""></div>
-                            <div class="txt">
-                                <div class="shopinfo">
-                                    <h4>春水堂</h4>
-                                    <strong>免運</strong>
-                                </div>
-                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
-                                        near_me
-                                    </i><u>3km</u></p>
-                            </div>
-                        </a>
-                        <div class="cover">
-                            <a href="#">
-                                <p>外送門檻</p>
-                                <p>2公里以內200元</p>
-                                <p>3公里以內300元</p>
-                                <p>4公里以內400元</p>
-                            </a>
-                        </div>
-                    </li>
-                    
+                    </li>                -->
                 </ul>
             </div>
         </div>
@@ -438,7 +305,8 @@
     </div>
     <script src="./js/jquery-3.7.1.min.js"></script> 
     <script src="./js/common.js"></script> 
-    <script src="./js/modal.js"></script>    
+    <script src="./js/modal.js"></script>
+    <script src="./js/index.js"></script>        
 </body>
 
 </html>
